major alignment fixes and added a date and driver page

--- a/src/Pages/RequestRidePage/requestRide.css
+++ b/src/Pages/RequestRidePage/requestRide.css
@@ -1,3 +1,9 @@
-.rise{
-    
+.middle{
+    text-align: center;
+    margin: auto;
+    position: relative;
+}
+.realign{
+    position: relative;
+    right: 5%;
 }
